--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -311,7 +311,16 @@
     </div>
 </div>
 
-
+<!-- footer -->
+<div class="bg-gray-900">
+  <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+    <div class="flex flex-col justify-between pt-5 pb-10 border-t border-gray-800 sm:flex-row">
+      <p class="text-sm text-gray-500" style="margin-left:30px;">
+        © Copyright 2024 Ajuda Mulheres. All rights reserved. Todas as imagens são ilustrativas para transmitir conforto as vítimas.
+      </p>
+    </div>
+  </div>
+</div>
 
 
 
