--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -22,11 +22,7 @@
     <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
       <div class="relative flex grid items-center grid-cols-2 lg:grid-cols-3">
         <a href="/" aria-label="Company" title="Company" class="inline-flex items-center lg:mx-auto">
-          <svg xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-            <path fill="#B197FC"
-              d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
-          </svg>
+          <img src="img/icons8-borboleta-50.png" alt="">
           <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">Ajuda Mulheres</span>
         </a>
 
@@ -303,7 +299,8 @@
                     EXISTE SOLUÇÃO E UM FIM POSITIVO PARA VOCÊ!
                 </h2>
                 <p class="text-justify md:text-lg text-justify">
-                    Segundo o Tribunal de Justiça do Distrito Federal e dos Territórios (TJDFT), denunciando e pedindo medidas protetivas, que são a suspensão da posse ou restrição do porte de armas, afastamento do lar ou local de convivência com a vítima, proibição de aproximação da vítima, de seus familiares e das testemunhas, com fixação de limite mínimo de distância entre estes e o ofensor, bem como proibição de contato com a vítima, seus familiares e testemunhas por qualquer meio de comunicação.
+                    Segundo o Tribunal de Justiça do Distrito Federal e dos Territórios <a href="https://www.tjdft.jus.br/institucional/imprensa/campanhas-e-produtos/direito-facil/edicao-semanal/das-medidas-protetivas-de-urgencia#:~:text=A%20lei%20prev%C3%AA%20medidas%20que,da%20v%C3%ADtima%20ao%20seu%20domic%C3%ADlio.&text=Art.">(TJDFT)</a>, denunciando e pedindo medidas 
+                    protetivas, que podem ser a suspensão da posse ou restrição do porte de armas, afastamento do lar ou local de convivência com a vítima, proibição de aproximação da vítima, de seus familiares e das testemunhas, com fixação de limite mínimo de distância entre estes e o ofensor, bem como proibição de contato com a vítima, seus familiares e testemunhas por qualquer meio de comunicação.
                     <br>A(o) juíza(o) pode determinar, também, a proibição de frequentar determinados lugares a fim de preservar a integridade física e psicológica da mulher, a restrição ou suspensão de visitas aos dependentes menores, prestação de alimentos provisionais ou provisórios, o comparecimento do agressor a programas de recuperação e reeducação, como os Grupos Reflexivos para homens, do TJDFT, e o acompanhamento psicossocial do ofensor, por meio de atendimento individual e/ou em grupo de apoio.
                 </p>
             </div>
@@ -315,7 +312,7 @@
 <div class="bg-gray-900">
   <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
     <div class="flex flex-col justify-between pt-5 pb-10 border-t border-gray-800 sm:flex-row">
-      <p class="text-sm text-gray-500" style="margin-left:30px;">
+      <p class="text-sm text-gray-500" style="margin-left:300px; color:white; margin-bottom:30px;">
         © Copyright 2024 Ajuda Mulheres. All rights reserved. Todas as imagens são ilustrativas para transmitir conforto as vítimas.
       </p>
     </div>
