--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -20,10 +20,10 @@
   <!-- HEADER -->
   <div class="bg-gray-900">
     <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-      <div class="relative flex grid items-center grid-cols-2 lg:grid-cols-3">
+      <div class="relative flex grid justify-center items-center">
         <a href="/" aria-label="Company" title="Company" class="inline-flex items-center lg:mx-auto">
-          <img src="img/icons8-borboleta-50.png" alt="">
-          <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">Ajuda Mulheres</span>
+          <img class="w-10 mr-3 h-10" src="img/icons8-borboleta-50.png" alt="">
+          <span class="text-xl font-bold tracking-wide text-gray-100 uppercase">Ajuda Mulheres</span>
         </a>
 
         <!-- Mobile menu -->
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="relative lg:w-1/2">
-        <img class="object-cover w-full h-56 rounded shadow-lg sm:h-96" src="/idh/src/img/imagem.jpg" alt="" />
+        <img class="object-cover w-full h-56 rounded shadow-lg sm:h-96" src="img/imagem.jpg" alt="" />
       </div>
     </div>
   </div>
@@ -135,7 +135,7 @@
       <div class="flex flex-col max-w-md sm:mx-auto sm:flex-row">
         <div class="mr-4">
           <div class="flex items-center justify-center w-12 h-12 mb-4 rounded-full bg-indigo-50">
-            <img class="w-8 h-8" src="/idh/src/img/icons8-soco-dianteiro-50.png" alt="">
+            <img class="w-8 h-8" src="img/icons8-soco-dianteiro-50.png" alt="">
             <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"
               points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
             </svg>
@@ -153,7 +153,7 @@
       <div class="flex flex-col max-w-md sm:mx-auto sm:flex-row">
         <div class="mr-4">
           <div class="flex items-center justify-center w-12 h-12 mb-4 rounded-full bg-indigo-50">
-            <img class="w-8 h-8" src="/idh/src/img/icons8-cabeça-com-cérebro-50.png" alt="">
+            <img class="w-8 h-8" src="img/icons8-cabeça-com-cérebro-50.png" alt="">
             <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"
               points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
             </svg>
@@ -173,7 +173,7 @@
       <div class="flex flex-col max-w-md sm:mx-auto sm:flex-row">
         <div class="mr-4">
           <div class="flex items-center justify-center w-12 h-12 mb-4 rounded-full bg-indigo-50">
-            <img src="/idh/src/img/icons8-cama-50.png" class="w-8 h-8" alt="">
+            <img src="img/icons8-cama-50.png" class="w-8 h-8" alt="">
             <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"
               points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
           </div>
@@ -191,7 +191,7 @@
       <div class="flex flex-col max-w-md sm:mx-auto sm:flex-row">
         <div class="mr-4">
           <div class="flex items-center justify-center w-12 h-12 mb-4 rounded-full bg-indigo-50">
-            <img src="/idh/src/img/icons8-saco-de-dinheiro-50.png" class="w-8 h-8" alt="">
+            <img src="img/icons8-saco-de-dinheiro-50.png" class="w-8 h-8" alt="">
             <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"
               points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
             </svg>
@@ -210,7 +210,7 @@
       <div class="flex flex-col max-w-md sm:mx-auto sm:flex-row">
         <div class="mr-4">
           <div class="flex items-center justify-center w-12 h-12 mb-4 rounded-full bg-indigo-50">
-            <img src="/idh/src/img/icons8-balão-de-fala-com-pontos-50.png" class="w-8 h-8" alt="">
+            <img src="img/icons8-balão-de-fala-com-pontos-50.png" class="w-8 h-8" alt="">
             <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"
               points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
             </svg>
@@ -241,7 +241,7 @@
       <div class="px-10 py-20 text-center border rounded lg:px-5 lg:py-10">
         <img src="img/2.jpg" alt="">
         <a href="https://www.cruzandohistorias.org/viva-com-gosto-de-liberdade?gad_source=1&gclid=CjwKCAjwxLKxBhA7EiwAXO0R0IXLN8IB_Iz_YFzzUjHcsd6khpcKtSHbmrgeicvCvY2ODsNU4m4DvBoC3SsQAvD_BwE"
-          class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
+          class="inline-block max-w-xs mx-auto mb-3 mt-5 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
           aria-label="Read article" title="Nori grape silver beet broccoli kombu beet">
           Cruzando Histórias
         </a>
@@ -253,7 +253,7 @@
       <div class="px-10 text-center border rounded lg:px-5 lg:py-10">
         <img src="img/1.jpg" alt="">
         <a href="https://tamojuntas.org.br/"
-          class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
+          class="inline-block max-w-xs mx-auto mb-3 mt-5 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
           aria-label="Read article" title="Well, the way they make shows is, they make one">
           Tamo juntas
         </a>
@@ -265,7 +265,7 @@
       <div class="px-10 py-20 text-center border rounded lg:px-5 lg:py-10">
         <img src="img/3.jpg" alt="">
         <a href="https://ongrecomecar.org.br/a-recomecar/"
-          class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
+          class="inline-block max-w-xs mx-auto mb-3 mt-5 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
           aria-label="Read article" title="Pommy ipsum smeg head whizz morris himer due">
           ONG Recomeçar
         </a>
@@ -289,7 +289,7 @@
         </div>
         <div class="mb-10 lg:max-w-lg lg:pr-5 lg:mb-0 ">
             <div>
-                <p class="inline-block px-3 py-px mb-4 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
+                <p class="inline-block px-3 py-px -mb-10 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
                     ESTÁ COM MEDO?
                 </p>
             </div>
@@ -311,8 +311,8 @@
 <!-- footer -->
 <div class="bg-gray-900">
   <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-    <div class="flex flex-col justify-between pt-5 pb-10 border-t border-gray-800 sm:flex-row">
-      <p class="text-sm text-gray-500" style="margin-left:300px; color:white; margin-bottom:30px;">
+    <div class="flex flex-col justify-center pt-5 pb-10 border-t border-gray-800 sm:flex-row">
+      <p class="text-sm text-gray-500 text-slate-50">
         © Copyright 2024 Ajuda Mulheres. All rights reserved. Todas as imagens são ilustrativas para transmitir conforto as vítimas.
       </p>
     </div>
