--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -296,7 +296,7 @@
             <div class="max-w-xl mb-6 lg:max-w-full">
                 <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
                     <br class="hidden md:block" />
-                    EXISTE SOLUÇÃO E UM FIM POSITIVO PARA VOCÊ!
+                    EXISTE SOLUÇÃO!
                 </h2>
                 <p class="text-justify md:text-lg text-justify">
                     Segundo o Tribunal de Justiça do Distrito Federal e dos Territórios <a href="https://www.tjdft.jus.br/institucional/imprensa/campanhas-e-produtos/direito-facil/edicao-semanal/das-medidas-protetivas-de-urgencia#:~:text=A%20lei%20prev%C3%AA%20medidas%20que,da%20v%C3%ADtima%20ao%20seu%20domic%C3%ADlio.&text=Art.">(TJDFT)</a>, denunciando e pedindo medidas 
