--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="output.css" rel="stylesheet">
+
   <style>
     h6 {
       color: #47126B;
@@ -62,10 +63,20 @@
             vitímas deem
             o primeiro passo rumo a sua libertação, como uma borboleta.
           </p>
-          <!-- <p class="text-justify md:text-lg text-justify">
-                A violência contra as mulheres é uma realidade trágica que persiste em todas as partes do mundo. Denunciar casos de violência é essencial por diversas razões cruciais. A denúncia contribui para responsabilizar os agressores, impedindo que continuem causando danos a outras pessoas. Também possibilita a identificação de padrões de violência e a intervenção precoce, potencialmente salvando vidas e evitando danos futuros. Socialmente, denunciar casos de violência desafia a cultura de tolerância à agressão, promovendo uma sociedade mais justa e segura para todas as pessoas, independentemente do gênero. Além disso, ao denunciar, as vítimas têm acesso a recursos legais, médicos e psicológicos que podem auxiliar na sua recuperação física e emocional. Precisa de ajuda? Desça e descubra os sinais e encontre ajuda!
-              </p> -->
         </div>
+        <!-- arruma botão renan -->
+        <div class="flex items-center md:justify-center" >
+          <button class="btn btn-primary">
+            <a
+            href="/idh/src/blog.html"
+            class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-deep-purple-accent-400 hover:bg-deep-purple-accent-700 focus:shadow-outline focus:outline-none"
+          >
+            Veja nosso blog
+          </a>
+          </button>
+          
+        </div>
+        <!-- até aqui -->
       </div>
       <div class="relative lg:w-1/2">
         <img class="object-cover w-full h-56 rounded shadow-lg sm:h-96" src="img/imagem.jpg" alt="" />
@@ -278,53 +289,56 @@
     </div>
   </div>
 
-
-
   <!-- final -->
 
   <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
     <div class="flex flex-col items-center justify-between lg:flex-row">
-        <div class="relative lg:w-1/2">
-            <img class="object-cover w-full rounded shadow-lg sm:h-80 md:h-96 lg:h-auto" src="img/zoe-Wvbcr7KeZDE-unsplash.jpg" alt="" />
+      <div class="relative lg:w-1/2">
+        <img class="object-cover w-full rounded shadow-lg sm:h-80 md:h-96 lg:h-auto"
+          src="img/zoe-Wvbcr7KeZDE-unsplash.jpg" alt="" />
+      </div>
+      <div class="mb-10 lg:max-w-lg lg:pr-5 lg:mb-0 ">
+        <div>
+          <p
+            class="inline-block px-3 py-px -mb-10 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
+            ESTÁ COM MEDO?
+          </p>
         </div>
-        <div class="mb-10 lg:max-w-lg lg:pr-5 lg:mb-0 ">
-            <div>
-                <p class="inline-block px-3 py-px -mb-10 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
-                    ESTÁ COM MEDO?
-                </p>
-            </div>
-            <div class="max-w-xl mb-6 lg:max-w-full">
-                <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
-                    <br class="hidden md:block" />
-                    EXISTE SOLUÇÃO!
-                </h2>
-                <p class="text-justify md:text-lg text-justify">
-                    Segundo o Tribunal de Justiça do Distrito Federal e dos Territórios <a href="https://www.tjdft.jus.br/institucional/imprensa/campanhas-e-produtos/direito-facil/edicao-semanal/das-medidas-protetivas-de-urgencia#:~:text=A%20lei%20prev%C3%AA%20medidas%20que,da%20v%C3%ADtima%20ao%20seu%20domic%C3%ADlio.&text=Art.">(TJDFT)</a>, denunciando e pedindo medidas 
-                    protetivas, que podem ser a suspensão da posse ou restrição do porte de armas, afastamento do lar ou local de convivência com a vítima, proibição de aproximação da vítima, de seus familiares e das testemunhas, com fixação de limite mínimo de distância entre estes e o ofensor, bem como proibição de contato com a vítima, seus familiares e testemunhas por qualquer meio de comunicação.
-                    <br>A(o) juíza(o) pode determinar, também, a proibição de frequentar determinados lugares a fim de preservar a integridade física e psicológica da mulher, a restrição ou suspensão de visitas aos dependentes menores, prestação de alimentos provisionais ou provisórios, o comparecimento do agressor a programas de recuperação e reeducação, como os Grupos Reflexivos para homens, do TJDFT, e o acompanhamento psicossocial do ofensor, por meio de atendimento individual e/ou em grupo de apoio.
-                </p>
-            </div>
+        <div class="max-w-xl mb-6 lg:max-w-full">
+          <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">
+            <br class="hidden md:block" />
+            EXISTE SOLUÇÃO!
+          </h2>
+          <p class="text-justify md:text-lg text-justify">
+            Segundo o Tribunal de Justiça do Distrito Federal e dos Territórios <a
+              href="https://www.tjdft.jus.br/institucional/imprensa/campanhas-e-produtos/direito-facil/edicao-semanal/das-medidas-protetivas-de-urgencia#:~:text=A%20lei%20prev%C3%AA%20medidas%20que,da%20v%C3%ADtima%20ao%20seu%20domic%C3%ADlio.&text=Art.">(TJDFT)</a>,
+            denunciando e pedindo medidas
+            protetivas, que podem ser a suspensão da posse ou restrição do porte de armas, afastamento do lar ou local
+            de convivência com a vítima, proibição de aproximação da vítima, de seus familiares e das testemunhas, com
+            fixação de limite mínimo de distância entre estes e o ofensor, bem como proibição de contato com a vítima,
+            seus familiares e testemunhas por qualquer meio de comunicação.
+            <br>A(o) juíza(o) pode determinar, também, a proibição de frequentar determinados lugares a fim de preservar
+            a integridade física e psicológica da mulher, a restrição ou suspensão de visitas aos dependentes menores,
+            prestação de alimentos provisionais ou provisórios, o comparecimento do agressor a programas de recuperação
+            e reeducação, como os Grupos Reflexivos para homens, do TJDFT, e o acompanhamento psicossocial do ofensor,
+            por meio de atendimento individual e/ou em grupo de apoio.
+          </p>
         </div>
-    </div>
-</div>
-
-<!-- footer -->
-<div class="bg-gray-900">
-  <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-    <div class="flex flex-col justify-center pt-5 pb-10 border-t border-gray-800 sm:flex-row">
-      <p class="text-sm text-gray-500 text-slate-50">
-        © Copyright 2024 Ajuda Mulheres. All rights reserved. Todas as imagens são ilustrativas para transmitir conforto as vítimas.
-      </p>
+      </div>
     </div>
   </div>
-</div>
 
-
-
-
-
-
+  <!-- footer -->
+  <div class="bg-gray-900">
+    <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
+      <div class="flex flex-col justify-center pt-5 pb-10 border-t border-gray-800 sm:flex-row">
+        <p class="text-sm text-gray-500 justify-center text-slate-50" style="color:white; margin-top:-40px;">
+          © Copyright 2024 Ajuda Mulheres. All rights reserved. Todas as imagens são ilustrativas para transmitir
+          conforto as vítimas.
+        </p>
+      </div>
+    </div>
+  </div>
 
 </body>
-
 </html>
