--- a/idh/src/blog.html
+++ b/idh/src/blog.html
@@ -68,7 +68,7 @@
             <p class="mb-2 text-xs font-semibold tracking-wide text-gray-600 uppercase">
               30 Abr 2024
             </p>
-            <a href="/" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Nori grape silver beet broccoli kombu beet">
+            <a href="https://www.cna.com.br/blog/cultura/red-flag#:~:text=Red%20flag%20%C3%A9%20uma%20express%C3%A3o,por%20pessoas%20ao%20seu%20redor" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Nori grape silver beet broccoli kombu beet">
               O que são RED FLAGS?
             </a>
             <p class="max-w-xs mx-auto mb-2 text-gray-700">
@@ -82,15 +82,15 @@
               25 Abr 2024
             </p>
             <a
-              href="/"
+              href="https://www.youtube.com/@AdvogadadaMulher"
               class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400"
               aria-label="Read article"
               title="Well, the way they make shows is, they make one"
             >
-              Well, the way they make shows is, they make one
+            Advogada da Mulher
             </a>
             <p class="max-w-xs mx-auto mb-2 text-gray-700">
-              Some pilots get picked and become television programs. Some don't, become nothing.
+                Advogada, especialista em Direito das Mulheres. Letícia atua no Direito das Famílias na defesa de mães solos e no Direito Criminal na assistência de mulheres vítimas de violência doméstica e familiar.
             </p>
             <a href="https://www.youtube.com/@AdvogadadaMulher" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
           </div>
@@ -99,13 +99,13 @@
             <p class="mb-2 text-xs font-semibold tracking-wide text-gray-600 uppercase">
               20 Abr 2024
             </p>
-            <a href="/" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Pommy ipsum smeg head whizz morris himer due">
-              Pommy ipsum smeg head whizz morris himer due
+            <a href="https://www.cnnbrasil.com.br/entretenimento/naiara-azevedo-mostra-hematomas-e-detalha-violencia-patrimonial/" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Pommy ipsum smeg head whizz morris himer due">
+              Caso de Naiara Azevedo
             </a>
             <p class="max-w-xs mx-auto mb-2 text-gray-700">
-              Taking the mick middle class bog roll bow ties are cool posh nosh off t'shop, stew and dumps.
+              A cantora Naiara Azevedo denunciou seu ex-marido e pediu media protetiva contra ele e seu irmão após denúncia de violência física e patrimonial.
             </p>
-            <a href="/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
+            <a href="https://www.cnnbrasil.com.br/entretenimento/naiara-azevedo-mostra-hematomas-e-detalha-violencia-patrimonial/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
           </div>
         </div>
       </div>
