--- a/idh/src/blog.html
+++ b/idh/src/blog.html
@@ -71,7 +71,7 @@
             <a href="https://www.cna.com.br/blog/cultura/red-flag#:~:text=Red%20flag%20%C3%A9%20uma%20express%C3%A3o,por%20pessoas%20ao%20seu%20redor" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Nori grape silver beet broccoli kombu beet">
               O que são RED FLAGS?
             </a>
-            <p class="max-w-xs mx-auto mb-2 text-gray-700">
+            <p class="max-w-xs mx-auto mb-2 text-gray-700 text-justify">
               Um termo popularizado nas redes sociais que busca alertar as pessoas sobre possíveis "bandeiras vermelhas" que a outra pessoa indique que "talvez não seja tão boa assim".
             </p>
             <a href="https://www.cna.com.br/blog/cultura/red-flag#:~:text=Red%20flag%20%C3%A9%20uma%20express%C3%A3o,por%20pessoas%20ao%20seu%20redor." aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
@@ -89,7 +89,7 @@
             >
             Advogada da Mulher
             </a>
-            <p class="max-w-xs mx-auto mb-2 text-gray-700">
+            <p class="max-w-xs mx-auto mb-2 text-gray-700 text-justify">
                 Advogada, especialista em Direito das Mulheres. Letícia atua no Direito das Famílias na defesa de mães solos e no Direito Criminal na assistência de mulheres vítimas de violência doméstica e familiar.
             </p>
             <a href="https://www.youtube.com/@AdvogadadaMulher" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
@@ -102,7 +102,7 @@
             <a href="https://www.cnnbrasil.com.br/entretenimento/naiara-azevedo-mostra-hematomas-e-detalha-violencia-patrimonial/" class="inline-block max-w-xs mx-auto mb-3 text-2xl font-extrabold leading-7 transition-colors duration-200 hover:text-deep-purple-accent-400" aria-label="Read article" title="Pommy ipsum smeg head whizz morris himer due">
               Caso de Naiara Azevedo
             </a>
-            <p class="max-w-xs mx-auto mb-2 text-gray-700">
+            <p class="max-w-xs mx-auto mb-2 text-gray-700 text-justify">
               A cantora Naiara Azevedo denunciou seu ex-marido e pediu media protetiva contra ele e seu irmão após denúncia de violência física e patrimonial.
             </p>
             <a href="https://www.cnnbrasil.com.br/entretenimento/naiara-azevedo-mostra-hematomas-e-detalha-violencia-patrimonial/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Leia Mais</a>
