--- a/idh/src/index.html
+++ b/idh/src/index.html
@@ -68,7 +68,7 @@
         <div class="flex items-center md:justify-center" >
           <button class="btn btn-primary">
             <a
-            href="/idh/src/blog.html"
+            href="blog.html"
             class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-deep-purple-accent-400 hover:bg-deep-purple-accent-700 focus:shadow-outline focus:outline-none"
           >
             Veja nosso blog
