--- a/idh/src/blog.html
+++ b/idh/src/blog.html
@@ -21,7 +21,7 @@
     <div class="bg-gray-900">
         <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
             <div class="relative flex grid justify-center items-center">
-                <a href="/" aria-label="Company" title="Company" class="inline-flex items-center lg:mx-auto">
+                <a href="/idh/src/index.html" aria-label="Company" title="Company" class="inline-flex items-center lg:mx-auto">
                     <img class="w-10 mr-3 h-10" src="img/icons8-borboleta-50.png" alt="">
                     <span class="text-xl font-bold tracking-wide text-gray-100 uppercase">Ajuda Mulheres</span>
                 </a>
